--- a/HW4/hw4-sol-knitrR.Rnw
+++ b/HW4/hw4-sol-knitrR.Rnw
@@ -130,6 +130,7 @@ p
 \section*{Problem 3.4}
 Again, we're using (modified) code from Homework \#3. Check the hw3 solution if you want to see more comments about how this function works.
 <<cache=TRUE>>=
+set.seed(5)
 RWM = function(t = 1e2, M = 1e4, p0 = 1, K) {
   #note that M inside this function denotes sample size
   stopifnot(all(rowSums(K) == 1))
@@ -161,6 +162,7 @@ All three are converging to the vector $\pi$.
 \section*{Problem 3.5}
 I've only changed a few lines. Now this function returns two things, the p vector and an array with the matrix of moves for every iteration.
 <<cache=TRUE>>=
+set.seed(10)
 RWMv2 = function(t = 1e2, M = 1e4, p0 = 1, K){
   #note that M inside this function denotes sample size
   stopifnot(all(rowSums(K) == 1))
@@ -214,21 +216,23 @@ I wrote a function to find the path of U for different parameters (such as Nsim,
 
 I'm running this sampler at 2 values of T: 5 and 0.2. At each value we'll plot the best path from that it sampled, and the path of U.
 
-Note that a lower value for T leads to the Markov Chain converging towards lower values of U over time. Also, I had to make the plots only display points where t is a multiple of 100, simply to keep the size of the images down. If you plotted every single point the lines would look even more jagged.
+Note that a lower value for T leads to the Markov Chain converging towards lower values of U over time. Also, I had to make the plots only display points where t is a multiple of 500, simply to keep the size of the images down. If you plotted every single point the lines would look even more jagged.
 <<cache=TRUE, fig.width = 4, fig.height=4, dpi = 50, fig.show='hold', fig.align='left'>>=
 library(ggplot2)
 library(scales)
-mstar = 49
-Nsim = 5e4
+mstar = 19
+Nsim = 5e5
+set.seed(15)
 U = MetropolisWalkCircle(m=mstar, T=5, Nsim=Nsim, plotbest=TRUE)$U
 #The following 2 lines serve to only choose every 100th value of U. Plotting every value makes the resulting image too large for the .pdf.
-U = U[seq_along(U) %% 100 == 0]
-t = 100 * (1:floor(Nsim / 100)) #t is increments of 100
+U = U[seq_along(U) %% 500 == 0]
+t = 500 * (1:floor(Nsim / 500)) #t is increments of 100
 ggplot(data.frame(U, t),aes(x=t,y=U)) + geom_line(alpha = 0.7) + scale_x_continuous(labels=comma) + ggtitle(paste('Samples from U @ T =',5)) + theme_minimal() + theme(plot.title = element_text(size=12))
 
+set.seed(15)
 U = MetropolisWalkCircle(m=mstar, T=0.2, Nsim=Nsim, plotbest=TRUE)$U
-U = U[seq_along(U) %% 100 == 0]
-t = 100 * (1:floor(Nsim / 100))#t is increments of 100
+U = U[seq_along(U) %% 500 == 0]
+t = 500 * (1:floor(Nsim / 500))#t is increments of 100
 ggplot(data.frame(U, t), aes(x=t,y=U)) + geom_line(alpha = 0.7) + scale_x_continuous(labels=comma) + ggtitle(paste('Samples from U @ T =', 0.2)) + theme_minimal() + theme(plot.title = element_text(size=12))
 @
 \section*{Problem 4.3}
@@ -236,36 +240,39 @@ If $T_0$ is our initial value of $T$ and $T_N$ is the final value of T I want, I
 <<cache=TRUE, fig.width = 4, fig.height=4, dpi = 50, fig.show='hold', fig.align='left'>>=
 library(ggplot2)
 library(scales)
-mstar=49
-Nsim = 5e4
-T0 = 5
-TN = 1
+mstar=19
+Nsim = 5e5
+T0 = 10
+TN = .1
 coolingrate = 1 - (TN/T0) ^ (1/Nsim)
 print(coolingrate) #T will be reduced by a factor of 1-coolingrate at each iteration
-mstar = 49
+set.seed(15)
 U = SimAnnealWalkCircle(m=mstar, T0=T0, rate=coolingrate, Nsim=Nsim, plotbest=TRUE)$U
-U = U[seq_along(U) %% 100 == 0]
-t = 100 * (1:floor(Nsim / 100))
+U = U[seq_along(U) %% 500 == 0]
+t = 500 * (1:floor(Nsim / 500))
 ggplot(data.frame(U, t),aes(x=t,y=U)) + geom_line(alpha = 0.7) + scale_x_continuous(labels=comma) +  ggtitle(paste('Samples from U @ T0 =',T0, ', rate =', signif(coolingrate, 1))) + theme_minimal() + theme(plot.title = element_text(size=12))
 
-T0 = 5; TN = 0.005
+T0 = 10; TN = 0.002
 (coolingrate = 1 - (TN/T0) ^ (1/Nsim))
+set.seed(15)
 U = SimAnnealWalkCircle(m=mstar, T0=T0, rate=coolingrate, Nsim=Nsim, plotbest=TRUE)$U
-U = U[seq_along(U) %% 100 == 0]
-t = 100 * (1:floor(Nsim / 100))
+U = U[seq_along(U) %% 500 == 0]
+t = 500 * (1:floor(Nsim / 500))
 ggplot(data.frame(U, t),aes(x=t,y=U)) + geom_line(alpha = 0.7) + scale_x_continuous(labels=comma) +  ggtitle(paste('Samples from U @ T0 =',T0, ', rate =', signif(coolingrate, 1))) + theme_minimal() + theme(plot.title = element_text(size=12))
 @
-A faster cooling rate made an enormous impact. Remember, I only used 50,000 iterations here, which for MCMC algorithms is a very small number. If I ran that last chain for longer I'm sure I would get to the optimal solution.
+A faster cooling rate made an enormous impact. Remember, I only used 500,000 iterations here, which for MCMC algorithms is not a huge number. 
+
 \section*{Problem 4.4}
-This function is pretty similar, aside from the fact that it places the cities in a different manner. See the placeCitiesSquare() in the appendix. I'm running it with 100,000 iterations this time.
+This function is pretty similar, aside from the fact that it places the cities in a different manner. See the placeCitiesSquare() in the appendix.
 <<cache=TRUE, fig.width = 4, fig.height=4, dpi = 50, fig.show='hold', fig.align='left'>>=
-Nsim = 1e5
-mstar = 49
-T0 = 5; TN = 0.005
+set.seed(15)
+Nsim = 5e5
+mstar = 19
+T0 = 10; TN = 0.002
 (coolingrate = 1 - ((TN/T0) ^ (1/Nsim)))
 U = SimAnnealWalkSquare(m=mstar, T0=T0, rate=coolingrate, Nsim=Nsim, plotbest=TRUE)$U
-U = U[seq_along(U) %% 100 == 0]
-t = 100 * (1:floor(Nsim / 100))
+U = U[seq_along(U) %% 500 == 0]
+t = 500 * (1:floor(Nsim / 500))
 ggplot(data.frame(U, t),aes(x=t,y=U)) + geom_line(alpha = 0.7) + scale_x_continuous(labels=comma) +  ggtitle(paste('Samples from U @ T0 =',T0, ', rate =', signif(coolingrate, 1))) + theme_minimal() + theme(plot.title = element_text(size=12))
 @
 \section*{Appendix: R functions for Problem \#4}
